# Chess

./: .clang-format  .gitignore  Bishop.cpp  Bishop.h  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessBoard2.cpp  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Position.cpp  Position.h  Queen.cpp  Queen.h  README.md  Readme.txt  Rook.cpp  Rook.h  bishop.h  chessboard.cpp  chessboard.h  chessboard2.cpp  chessboardprinter.cpp  king.cpp  king.h  knight.h  main.cpp  pawn.h  piece.cpp  piece.h  position.cpp  position.h  prova.cpp  queen.cpp  (+1 more)
include/: chessboard.h  chessboardprinter.h  configuration.h  configurationitem.h  position.h
include/pieces/: bishop.h  piece.h  queen.h  rook.h
src/: chessboard.cpp  chessboard2.cpp  chessboardprinter.cpp  configuration.cpp  configurationitem.cpp  main.cpp  position.cpp
src/pieces/: bishop.cpp  knight.cpp  pawn.cpp  piece.cpp
test/data/: configurations.txt
test/include/: boardgenerator.h
test/src/: boardgenerator.cpp  configurations.txt  testposition.cpp
